--- a/style.css
+++ b/style.css
@@ -71,11 +71,53 @@ body{
      background: blueviolet;
      margin-left: 15px;
      padding: 5px 10px;
-
- }
- .wordlcup-2022 img{
-     position: relative;
  }
 
+#wordlcup-2022:hover{
+    transform: scaleX(1.2) scaleY(1.5);
+
+ }
 
  /*-- !body section-2 end  ---*/
+ /*------fotter part start -----*/
+
+ .fotter-part{
+     width: 450px;
+     justify-content: center;
+ }
+ .fotter{
+     display: grid;
+     grid-template-rows: repeat(3,1fr);
+     justify-content: center;
+     margin-top: 50px;
+     margin-bottom: 20px;
+     margin-left: 500px;
+     margin-right: 400px;
+
+ }
+.fotter-part img{
+    width: 300px;
+    padding: 10px;
+    
+}
+#icons{
+    width: 400px;
+    color: silver;
+    justify-content: center;
+}
+.fa{
+    background-color: gainsboro;
+    padding: 5px;
+    border-radius: 50%;
+    align-items: center;
+}
+
+
+ /*------fotter part end -----*/
+
+ animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  50% {transform: rotate(180deg);}
+}
