--- a/style.css
+++ b/style.css
@@ -11,12 +11,15 @@ body{
     background-color: blue;
     width: 100%;
     height: 500px;
-    margin: 0;
+    margin-bottom: 50px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
     align-items: center;
     
 } 
 .welcom-part{
-    width: 70%;
+    width: 30%;
     padding-left: 100px;
 
 }
@@ -26,9 +29,12 @@ body{
     padding-left: 15px;
 }
 .header-part img{
-    width: 40%;
+    width: 70%;
     float:right;
-    padding: 50px 40px  ;
+    padding: 50px;
+}
+.header-part:hover img{
+   transform:rotateZ(30deg);
 }
 
 /*----header end----*/
@@ -143,9 +149,3 @@ body{
 
  /*------fotter part end -----*/
 
- animation: mymove 5s infinite;
-}
-
-@keyframes mymove {
-  50% {transform: rotate(180deg);}
-}
